<resources>
    <string name="app_name">도전농구왕</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_name">이름</string>
    <string name="sign_position">포지션을 선택해주세요</string>
    <string name="gender_F">여</string>
    <string name="gender_M">남</string>
    <string name="sign_age">아래의 막대를 이용하여 자신의 나이를 설정해주세요</string>
    <string name="sign_title">환영합니다.</string>
    <string name="sign_desc">경기중 채팅기능을 위하여 카카오톡이 필요합니다.\n원활한 매칭을 위하여 카카오톡 로그인을 권장합니다.</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="player_name_ex">마이클 조던</string>
    <string name="player_gender_age_ex">남(52)</string>
    <string name="player_position_ex">SG 슈팅가드</string>
    <string name="player_rate_ex">72.54%</string>
    <string name="player_position">포지션 : </string>
    <string name="player_rate">승　률 : </string>
    <string name="title_activity_team">선수 정보</string>
    <string name="team_name_ex">휴스턴 로켓츠</string>
    <string name="team_rate">승　률 : </string>
    <string name="team_rate_ex">38.12%</string>
    <string name="team_loc">연고지</string>
    <string name="team_loc_ex">미국 텍사스 휴스턴</string>
    <string name="team_score_desc">전적 자세히 보기&gt;&gt;</string>
    <string name="title_activity_in_game">InGameActivity</string>
    <string name="ingame_gaming">경기중</string>
    <string name="ingame_clock_ex">00:00:30</string>
    <string name="btn_game_set">경기 종료</string>
    <string name="title_activity_wait">WaitActivity</string>
    <string name="frag_wait_status">선수를 모집하는 중입니다.</string>
    <string name="frag_wait_game_name_ex">관악구NBA파이널</string>
    <string name="frag_wait_game_type_ex">5:5 팀전</string>
    <string name="frag_wait_game_time_ex">AM 11:30</string>
    <string name="frag_wait_game_loc_ex">서울시 관악구 낙성대동</string>
    <string name="frag_wait_game_req_pos_ex">현재 SG,PF 모집중</string>
    <string name="frag_wait_game_req_num">모집인원 : </string>
    <string name="frag_wait_game_req_num_ex">3/10</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_join">참여</string>
    <string name="btn_get_id">주최자 아이디 받기</string>
    <string name="frag_team_type_player">개인별</string>
    <string name="frag_team_type_game">경기별</string>
    <string name="item_team_score_title_ex">마이클 조던</string>
    <string name="item_team_score_win_ex">12승</string>
    <string name="item_team_score_lose_ex">5패</string>
    <string name="frag_team_select_title">경기에 함께할 팀을 선택해주세요</string>
    <string name="frag_team_select_message_ex">마이클 잭슨,서원국,홍재완,스테판 커리,제임스 하든\n위 엔트리로 경기에 출전 합니다.</string>
    <string name="item_team_name_ex">휴스턴 로켓츠</string>
    <string name="item_team_child_name_ex">제임스 하든</string>
    <string name="frag_nav_start_ex">출발지점 : 서울시 관악구 낙성대동</string>
    <string name="frag_nav_destination_ex">도착지점 : 미국 텍사스 휴스턴</string>
    <string name="frag_nav_expect_ex">예상시간 : 207시간</string>
    <string name="score_card_game_name_ex">관악 배스킷볼 챌린지 결승</string>
    <string name="score_card_game_type_ex">5:5 팀전</string>
    <string name="score_card_game_time_ex">01:30:50</string>
    <string name="score_card_enemy_ex">골든 스테이트 워리어즈전</string>
    <string name="score_card_result_ex">승</string>
</resources>

