<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_body"
        android:id="@+id/frag_wait_game_name"
        android:text="@string/frag_wait_game_name_ex"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frag_wait_game_type"
        android:text="@string/frag_wait_game_type_ex"
        android:layout_toRightOf="@id/frag_wait_game_name"
        app:layout_marginTopPercent="1.2%"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frag_wait_game_time"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/text_body"
        android:text="@string/frag_wait_game_time_ex"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frag_wait_game_req_num"
        android:text="@string/frag_wait_game_req_num"
        android:layout_below="@id/frag_wait_game_name"
        />
    <TextView
        android:layout_toRightOf="@id/frag_wait_game_req_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frag_wait_game_req_num_value"
        android:layout_below="@id/frag_wait_game_name"
        android:text="@string/frag_wait_game_req_num_ex"
        />
    <TextView
        android:layout_alignParentRight="true"
        android:id="@+id/frag_wait_game_req_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frag_wait_game_name"
        android:text="@string/frag_wait_game_req_pos_ex"
        />
    <android.support.v7.widget.CardView
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_below="@id/frag_wait_game_req_num"
        app:layout_widthPercent="90%"
        app:layout_heightPercent="15%"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_wait_game_loc_ex"
            android:id="@+id/frag_wait_game_loc"
            android:layout_gravity="center"
            />

    </android.support.v7.widget.CardView>
</android.support.percent.PercentRelativeLayout>