<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginBottom="@dimen/item_margin"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/cardColor"
        app:cardCornerRadius="8dp"
        >

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/card_inset"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/score_card_game_name"
        android:text="@string/score_card_game_name_ex"
        android:textSize="@dimen/text_body"
        />
    <TextView
        android:layout_below="@id/score_card_game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/score_card_game_type"
        android:text="@string/score_card_game_type_ex"
        />
    <TextView
        app:layout_marginLeftPercent="3%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/score_card_enemy_team"
        android:layout_below="@id/score_card_game_name"
        android:layout_toRightOf="@id/score_card_game_type"
        android:text="@string/score_card_enemy_ex"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/score_card_game_time"
        android:layout_toRightOf="@id/score_card_game_name"
        android:text="@string/score_card_game_time_ex"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:id="@+id/score_card_game_result"
        android:text="@string/score_card_result_ex"
        android:textSize="@dimen/text_header"
        android:textColor="@color/light_blue_500"
        />
    </android.support.percent.PercentRelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.percent.PercentRelativeLayout>