<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:id="@+id/team_root_card"
        xmlns:carc_view="http://schemas.android.com/apk/res-auto"
        carc_view:cardBackgroundColor="@color/cardColor"
        carc_view:cardCornerRadius="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="100%">
        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/card_inset">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/player_image_card"
                android:layout_centerVertical="true"
                app:layout_widthPercent="35%"
                app:layout_heightPercent="80%"
                card_view:cardCornerRadius="8dp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/player_image"
                    />
            </android.support.v7.widget.CardView>
            <TextView
                app:layout_marginTopPercent="20%"
                app:layout_widthPercent="30%"
                app:layout_heightPercent="20%"
                app:layout_marginLeftPercent="8%"
                android:layout_toRightOf="@id/player_image_card"
                android:id="@+id/player_name"
                android:textSize="@dimen/text_body"
                android:text="@string/player_name_ex"

                />
            <TextView
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:layout_marginTopPercent="22%"
                app:layout_widthPercent="30%"
                app:layout_heightPercent="20%"
                android:layout_toRightOf="@id/player_name"
                android:id="@+id/player_gender_age"
                android:text="@string/player_gender_age_ex"
                />
            <TextView
                app:layout_widthPercent="17%"
                app:layout_heightPercent="17%"
                android:layout_below="@id/player_name"
                android:layout_toRightOf="@id/player_image_card"
                app:layout_marginLeftPercent="8%"
                android:id="@+id/player_position"
                android:text="@string/player_position"
                android:lines="1"
                />
            <TextView
                app:layout_widthPercent="43%"
                app:layout_heightPercent="7%"
                android:layout_below="@id/player_name"
                android:layout_toRightOf="@id/player_position"
                android:id="@+id/player_position_value"
                android:text="@string/player_position_ex"
                />
            <TextView
                app:layout_widthPercent="17%"
                app:layout_heightPercent="10%"
                android:layout_below="@id/player_position"
                android:layout_toRightOf="@id/player_image_card"
                app:layout_marginLeftPercent="8%"
                android:id="@+id/player_rate"
                android:text="@string/player_rate"
                />
            <TextView
                app:layout_widthPercent="43%"
                app:layout_heightPercent="10%"
                android:layout_below="@id/player_position"
                android:layout_toRightOf="@id/player_rate"
                android:id="@+id/player_rate_value"
                android:text="@string/player_rate_ex"
                />

        </android.support.percent.PercentRelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.percent.PercentRelativeLayout>