<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?attr/actionBarSize"
    tools:context="com.swk.basket.wang.PlayerActivity"
    tools:showIn="@layout/app_bar_player"
    >
    <android.support.v7.widget.CardView
        android:id="@+id/player_root_card"
        xmlns:carc_view="http://schemas.android.com/apk/res-auto"
        carc_view:cardBackgroundColor="@color/cardColor"
        carc_view:cardCornerRadius="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="32%">
        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/card_inset">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/player_image_card"
                android:layout_centerVertical="true"
                app:layout_widthPercent="35%"
                app:layout_heightPercent="80%"
                card_view:cardCornerRadius="8dp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/player_image"
                    />
            </android.support.v7.widget.CardView>
            <TextView
                app:layout_marginTopPercent="20%"
                app:layout_widthPercent="30%"
                app:layout_heightPercent="20%"
                app:layout_marginLeftPercent="8%"
                android:layout_toRightOf="@id/player_image_card"
                android:id="@+id/player_name"
                android:textSize="@dimen/text_body"
                android:text="@string/player_name_ex"

                />
            <TextView
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:layout_marginTopPercent="22%"
                app:layout_widthPercent="30%"
                app:layout_heightPercent="20%"
                android:layout_toRightOf="@id/player_name"
                android:id="@+id/player_gender_age"
                android:text="@string/player_gender_age_ex"
                />
            <TextView
                app:layout_widthPercent="17%"
                app:layout_heightPercent="17%"
                android:layout_below="@id/player_name"
                android:layout_toRightOf="@id/player_image_card"
                app:layout_marginLeftPercent="8%"
                android:id="@+id/player_position"
                android:text="@string/player_position"
                android:lines="1"
                />
            <TextView
                app:layout_widthPercent="43%"
                app:layout_heightPercent="17%"
                android:layout_below="@id/player_name"
                android:layout_toRightOf="@id/player_position"
                android:id="@+id/player_position_value"
                android:text="@string/player_position_ex"
                />
            <TextView
                app:layout_widthPercent="17%"
                app:layout_heightPercent="10%"
                android:layout_below="@id/player_position"
                android:layout_toRightOf="@id/player_image_card"
                app:layout_marginLeftPercent="8%"
                android:id="@+id/player_rate"
                android:text="@string/player_rate"
                />
            <TextView
                app:layout_widthPercent="43%"
                app:layout_heightPercent="10%"
                android:layout_below="@id/player_position"
                android:layout_toRightOf="@id/player_rate"
                android:id="@+id/player_rate_value"
                android:text="@string/player_rate_ex"
                />

        </android.support.percent.PercentRelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="8dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="7%"
        android:layout_below="@id/player_root_card"
        app:layout_marginTopPercent="3%"
        android:id="@+id/player_team_card"
        >
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/player_team"
            />
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.RecyclerView
        app:layout_marginTopPercent="2%"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="35%"
        android:id="@+id/player_score_list"
        android:layout_below="@id/player_team_card"
        />
</android.support.percent.PercentRelativeLayout>
