<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?attr/actionBarSize"
    tools:context="com.swk.basket.wang.InGameActivity"
    tools:showIn="@layout/app_bar_in_game"
    >
    <TextView
        app:layout_marginTopPercent="10%"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_header"
        android:text="@string/ingame_gaming"
        android:id="@+id/ingame_status"
        />
    <ImageView
        app:layout_marginTopPercent="3%"
        android:layout_below="@id/ingame_status"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="20%"
        android:src="@drawable/ball"
        android:id="@+id/ingame_icon"
        />
    <TextView
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_header"
        android:text="@string/ingame_clock_ex"
        app:layout_marginTopPercent="3%"
        android:layout_below="@id/ingame_icon"
        android:id="@+id/ingame_clock"
        />
    <android.support.v7.widget.CardView
        app:layout_widthPercent="60%"
        android:layout_centerHorizontal="true"
        app:layout_heightPercent="7%"
        app:cardCornerRadius="8dp"
        android:layout_below="@id/ingame_clock"
        app:layout_marginTopPercent="12%"
        app:cardBackgroundColor="@color/colorPrimary"

        >
        <TextView
            android:text="@string/btn_game_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_body"
            android:layout_gravity="center_horizontal|center_vertical"
            />
    </android.support.v7.widget.CardView>
</android.support.percent.PercentRelativeLayout>
