<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="180dp"
    android:layout_height="match_parent">

    <android.support.percent.PercentRelativeLayout
        app:layout_widthPercent="100%"
        app:layout_heightPercent="70%"
        android:id="@+id/item_team_score_graph"
        >
        <TextView
            app:layout_marginLeftPercent="76%"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_team_score_lose_ex"
            android:id="@+id/item_team_score_lose"
            android:layout_centerVertical="true"

            />
        <FrameLayout
            app:layout_marginLeftPercent="30%"
            android:layout_width="14dp"
            app:layout_heightPercent="100%"
            android:background="@color/light_blue_500"
            android:id="@+id/item_team_score_win_graph"
        />
        <FrameLayout
            app:layout_marginLeftPercent="63%"
            android:layout_width="14dp"
            app:layout_heightPercent="100%"
            android:background="@color/red_400"
            android:id="@+id/item_team_score_lose_graph"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_team_score_win_ex"
            android:id="@+id/item_team_score_win"
            android:layout_centerVertical="true"
            app:layout_marginLeftPercent="9%"
            />
    </android.support.percent.PercentRelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorPrimary"
        android:layout_below="@id/item_team_score_graph"
        />
    <TextView
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_team_score_title"
        android:text="@string/item_team_score_title_ex"
        android:layout_below="@id/item_team_score_graph"
        android:layout_marginTop="18dp"
        />
</android.support.percent.PercentRelativeLayout>