<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?attr/actionBarSize"
    tools:context="com.swk.basket.wang.teamActivity"
    tools:showIn="@layout/app_bar_team"
    >
    <android.support.v7.widget.CardView
        android:id="@+id/team_root_card"
        xmlns:carc_view="http://schemas.android.com/apk/res-auto"
        carc_view:cardBackgroundColor="@color/cardColor"
        carc_view:cardCornerRadius="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="32%">
        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/card_inset">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/team_image_card"
                android:layout_centerVertical="true"
                app:layout_widthPercent="35%"
                app:layout_heightPercent="84%"
                card_view:cardCornerRadius="8dp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/team_image"
                    />
            </android.support.v7.widget.CardView>
            <TextView
                app:layout_marginTopPercent="20%"
                app:layout_widthPercent="60%"
                app:layout_heightPercent="20%"
                app:layout_marginLeftPercent="8%"
                android:layout_toRightOf="@id/team_image_card"
                android:id="@+id/team_name"
                android:textSize="@dimen/text_body"
                android:text="@string/team_name_ex"
                android:lines="1"

                />
            <TextView
                app:layout_widthPercent="17%"
                app:layout_heightPercent="15%"
                android:layout_below="@id/team_name"
                android:layout_toRightOf="@id/team_image_card"
                app:layout_marginLeftPercent="8%"
                android:id="@+id/team_rate"
                android:text="@string/team_rate"
                android:lines="1"
                />
            <TextView
                app:layout_widthPercent="43%"
                app:layout_heightPercent="15%"
                android:layout_below="@id/team_name"
                android:layout_toRightOf="@id/team_rate"
                android:id="@+id/team_rate_value"
                android:text="@string/team_rate_ex"
                />
            <TextView
                app:layout_widthPercent="17%"
                app:layout_heightPercent="10%"
                android:layout_below="@id/team_rate"
                android:layout_toRightOf="@id/team_image_card"
                app:layout_marginLeftPercent="8%"
                android:id="@+id/team_loc"
                android:text="@string/team_loc"
                />
            <TextView
                app:layout_marginLeftPercent="8%"
                app:layout_widthPercent="60%"
                app:layout_heightPercent="20%"
                android:layout_below="@id/team_loc"
                android:layout_toRightOf="@id/team_image_card"
                android:id="@+id/team_loc_value"
                android:text="@string/team_loc_ex"
                />

        </android.support.percent.PercentRelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="8dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="7%"
        android:layout_below="@id/team_root_card"
        app:layout_marginTopPercent="2%"
        android:id="@+id/team_mate_card"
        >
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/team_mate"
            />
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.RecyclerView
        app:layout_marginTopPercent="2%"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="37%"
        android:id="@+id/team_score_list"
        android:layout_below="@id/team_mate_card"
        />
    <android.support.v7.widget.CardView
        app:layout_widthPercent="40%"
        app:layout_heightPercent="5%"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardBackgroundColor="@color/colorPrimary"
        android:layout_below="@id/team_score_list"
        card_view:cardCornerRadius="8dp"
        android:id="@+id/team_score_desc"
        >
        <TextView
            android:layout_gravity="center_vertical"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_score_desc"
            />

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        app:layout_heightPercent="60%"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="14dp"
        app:cardBackgroundColor="@color/cardColor"
        android:elevation="15dp"
        android:visibility="gone"
        android:id="@+id/team_score_desc_card"
        />
</android.support.percent.PercentRelativeLayout>
