<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/card_inset"
        >
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="wrap_content"
            app:layout_heightPercent="10%"
            android:id="@+id/frag_make_game_name"
            />
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/frag_make_game_position"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            app:layout_heightPercent="10%"
            />
        <FrameLayout
            android:layout_below="@id/frag_make_game_name"
            android:layout_width="match_parent"
            app:layout_heightPercent="15%"
            >
            <android.support.v7.widget.CardView
                android:padding="@dimen/card_inset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/cardColor"
                >
                <android.support.percent.PercentRelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/card_inset"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/frag_make_game_req_num"
                        android:text="@string/frag_wait_game_req_num"
                        android:textSize="@dimen/text_body"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/frag_make_game_req_num"
                        android:id="@+id/frag_make_game_req_num_value"
                        android:text="@string/frag_wait_game_req_num_ex"
                        android:textSize="@dimen/text_body"
                        />
                    <android.support.v7.widget.AppCompatImageButton
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_alignParentRight="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_add_circle_white_48dp"
                        android:background="@android:color/transparent"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/frag_make_game_req_pos"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/frag_wait_game_req_pos_ex"
                        />
                </android.support.percent.PercentRelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:padding="@dimen/card_inset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/cardColor"
                >
            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/card_inset"
                >
                <ExpandableListView
                    android:id="@+id/frag_make_game_team_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </android.support.percent.PercentRelativeLayout>
            </android.support.v7.widget.CardView>
        </FrameLayout>
    </android.support.percent.PercentRelativeLayout>
</android.support.percent.PercentRelativeLayout>